# px-accounts-service

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  package.scm  px_accounts_service_plugin_test.py  target_tests.sh
cpp-custom-plugin/: CMakeLists.txt  PluginInterface.cpp  cpp-custom-plugin.cpp  cpp-custom-plugin.h
cpp-test-plugin/: CMakeLists.txt  PluginInterface.cpp  cpp-test-plugin.cpp  cpp-test-plugin.h
cpp-test-plugins/: CMakeLists.txt  cpp-autoinit-plugin.cpp  cpp-test-plugin.cpp  cpp-test-plugin.h
docs/: Doxyfile
interface/: Account.capnp  AccountReader.capnp  AccountWriter.capnp  Secret.capnp  event.capnp
interface/password/: interface.capnp  passwordbook.capnp
providers/: test_provider.yaml
python-test-plugin/: px_accounts_service_plugin_protected_params.py  px_accounts_service_plugin_python_autoinit.py  px_accounts_service_plugin_python_json.py  px_accounts_service_plugin_python_test.py  px_accounts_service_plugin_test_public_service.py
src/: AccountDefinitions.cpp  AccountDefinitions.h  AccountManager.cpp  AccountManager.h  AccountParser.cpp  AccountParser.h  AccountUtils.cpp  AccountUtils.h  CMakeLists.txt  EventManager.cpp  EventManager.h  PasswordHandler.cpp  PasswordHandler.cpp.bak  PasswordHandler.h  PluginContainer.cpp  PluginContainer.h  PluginManager.cpp  PluginManager.h  ProviderHandler.cpp  ProviderHandler.h  RPCClient.cpp  RPCClient.h  RPCHandler.cpp  RPCHandler.h  RPCServer.cpp  RPCServer.h  main.cpp  px_accounts_service_plugin_test.py  testmodule.py
src/Accounts/: AccountDefinitions.cpp  AccountDefinitions.h  AccountManager.cpp  AccountManager.h  AccountObject.cpp  AccountObject.h  AccountParser.cpp  AccountParser.h  AccountService.cpp  AccountService.h  AccountUtils.cpp  AccountUtils.h
src/Plugins/: DLLoader.h  PluginContainerBase.cpp  PluginContainerBase.h  PluginContainerCpp.cpp  PluginContainerCpp.h  PluginContainerPython.cpp  PluginContainerPython.h  PluginInterface.h  PluginManager.cpp  PluginManager.h
src/Secret/: SecretManager.cpp  SecretManager.h
src/Utils/: ErrorReporter.h  Logger.cpp  Logger.h  Utils.h
tests/: CMakeLists.txt  PasswordSimulator.cpp  PasswordSimulator.h  SecretSimulator.cpp  SecretSimulator.h  account_reader.cpp  main.cpp  plugin_finder.cpp  px-accounts-service-plugin-test.py  px_accounts_service_plugin_test.py  secret_tester.cpp  test_account_manager.cpp  test_account_parser.cpp  test_common.cpp  test_common.h  test_event_system.cpp  test_plugin_system.cpp  test_providers.cpp  test_rpc_server.cpp
tests/simulators/: EventSimulator.cpp  EventSimulator.h
